app-configs/manifest-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: spring-boot-sample
  sessionAffinity: None
  type: ClusterIP
